# Trade-Suite-v2

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  README.md  __init__.py  __main__.py  alert_bot.txt  analysis.md  analysis.py  ccxt_interface.py  codex_migration_plan.md  coinbasepro.json  data_source.py  demo_sec_viewer.py  download_candles.py  factory_layout.ini  influx.py  lightweight_charts_test.py  main.py  mcp_server.py  order_book.json  pyproject.toml  requirements.txt  results_last.parquet  results_last_1h.parquet  scan_config.yaml  sec_api_main.py  test_cvd.py  test_layout.ini  test_widgets.json  test_widgets_launch.py  top_20_analysis.md  user_layout.ini  view_pstats.py
agent_playground/: README.md  __init__.py  agents.py  base.py  sandbox.py
agent_rules/: locator_agent.md  planner_agent.md  refactor_agent.md
agents/: README.md  __init__.py  agents.py  base.py  sandbox.py
analysis/: market_aggregator.py  market_analysis.py  technical_analysis.py
analysis_scanner/: analysis_backup.py  indicator_calculator.py  llm_price_action_plan_v1.md  main_workflow.py  output_handler.py
config/: config.json  factory_layout.ini  factory_widgets.json  factory_widgets_qt.json  user_layout.ini  user_layout.json  user_widgets.json
docs/: AI_NOTES_PROJECT_STRUCTURE.md  ALERTBOTMANAGER.md  ARCHITECTURE.md  CLEANUP_PLAN.md  DOCKABLE_WIDGETS.md  DOCS_REFACTOR.md  FINANCE_NOTES.md  OVERVIEW.md  README.md  SEC_API_README.md  data_flow_refactor.md  js_frontend_migration.md  partial_code_review.md  sec_api_methods.md  sentinel_heatmap_renderer_plan.md
scripts/: install.sh  (+14 more)
(+373 files in other folders)
