[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Sentinel Qt application and sentinel ops workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.0",
  "ccxt>=4.1.36",
  "pandas>=2.1.3",
  "numpy>=1.26.0",
  "pydantic>=2.10.0",
  "PySide6>=6.8.0",
  "pyqtgraph>=0.13.7",
  "qasync>=0.27.1",
  "PyYAML>=6.0",
  "influxdb-client>=1.38.0",
  "aiohttp>=3.9.1",
  "aiofiles>=23.2.1",
  "tabulate>=0.9.0",
  "qtawesome>=1.4.1",
  "yfinance>=0.2.55",
]

[project.scripts]
sentinel = "sentinel.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]
